# annot_tool

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
data/: metadata.csv
notebooks/: generate_metadata.ipynb
src/annot_tool/: __init__.py  app.py  components.py  data.py  main.py
